--- a/index.html
+++ b/index.html
@@ -60,8 +60,51 @@
                 
             </div>
         </section>
+        <!-- Botones -->
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Voy a tener suerte</button>
+            </div>
+
+        </section>
 
 
     </main>
+
+    <!-- Footer - pie de página-->
+    <footer>
+        <!-- Aquí iría la lista 1-->
+        <ul class="footer-left">
+            <li>
+                <!-- href contiene el link de... -->
+                <a href="https://about.google/?utm_source=google-MX&utm_medium=referral&utm_campaign=hp-footer&fg=1">Sobre Google</a>
+            </li>
+            <li>
+                <a href="https://ads.google.com/intl/es-419_mx/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicidad</a>
+            </li>
+            <li>
+                <a href="https://smallbusiness.withgoogle.com/intl/es-419_mx/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=ww-ww-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u&c=MX#!/">Negocios</a>
+            </li>
+            <li>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1">Cómo funciona la Búsqueda</a>
+            </li>
+        </ul>
+
+        <!-- Aquí iría la lista 2-->
+        <ul class="footer-right">
+            <li>
+                <a href="https://www.google.com.mx/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwj4sLKfj6mAAxVeKUQIHXfbBXkQ8awCCBM&url=https%3A%2F%2Fpolicies.google.com%2Fprivacy%3Fhl%3Des-419%26fg%3D1&usg=AOvVaw0kHgtbRrD3oGV-KWOzk5Hz&opi=89978449">Privacidad</a>
+            </li>
+            <li>
+                <a href="https://www.google.com.mx/url?sa=t&rct=j&q=&esrc=s&source=webhp&cd=&cad=rja&uact=8&ved=0ahUKEwj4sLKfj6mAAxVeKUQIHXfbBXkQ8qwCCBQ&url=https%3A%2F%2Fpolicies.google.com%2Fterms%3Fhl%3Des-419%26fg%3D1&usg=AOvVaw3Zv4AmKUS3beVzeEax8Pzp&opi=89978449">Condiciones</a>
+            </li>
+            <li>
+                <a href="https://www.google.com.mx/preferences?hl=es-419&fg=1">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
